# demo-crosschain-lending

./: .gitignore  LICENSE  README.md  hardhat.config.ts  package.json
abi/: IAccountAssetOracle.json  IChainsigtAdapter.json  ICreditToken.json  IDebtToken.json  ILendingPool.json  IMintableERC20.json  IPriceOracle.json  IRiskModel.json
chainsight/: Cargo.toml  README.md  dfx.json  package.json  test.sh  update_adress.sh
chainsight/scripts/: 0_update_addresses.sh  1_deploy_canisters.sh  2_subscribe.sh  3_send_ether.sh  4_lock_and_liquidation.sh  all.sh  setup.sh
chainsight/src/chainsight-generate/: Cargo.toml
chainsight/src/chainsight-generate/src/: lib.rs
chainsight/src/common/: Cargo.toml
chainsight/src/common/src/: abi.rs  config.rs  indexing.rs  lib.rs  types.rs
chainsight/src/core/: Cargo.toml
chainsight/src/core/src/: lib.rs  log_finder.rs  manager.rs  publisher.rs  rewards.rs  subscriber.rs  updateable.rs
chainsight/src/lock_indexer/: Cargo.toml
chainsight/src/lock_indexer/src/: lib.rs  store.rs
chainsight/src/lock_relayer/: Cargo.toml
chainsight/src/lock_relayer/src/: lib.rs  store.rs  utils.rs
chainsight/src/network/: Cargo.toml
chainsight/src/network/src/: contract.rs  lib.rs  network.rs
chainsight/src/oracle_manager/: Cargo.toml
chainsight/src/oracle_manager/src/: lib.rs
chainsight/src/unlock_indexer/: Cargo.toml
chainsight/src/unlock_indexer/src/: lib.rs  store.rs
chainsight/src/unlock_relayer/: Cargo.toml
contracts/chainsight/: ChainsightAdapter.sol
contracts/interfaces/: IAccountAssetOracle.sol  IChainsigtAdapter.sol  ICreditToken.sol  IDebtToken.sol  IERC20.sol  ILendingPool.sol  IMintableERC20.sol  IPriceOracle.sol  IRiskModel.sol
contracts/oracles/: SimpleKeyValueOracle.sol
contracts/pool/: LendingPool.sol
contracts/token/: CreditToken.sol  DebtToken.sol  MintableERC20.sol
scripts/: 0_deploy.ts  1_send_ether.ts  2_mint_and_lock_on_src.ts  3_borrow_on_dst.ts  4_oracle_price_gets_high.ts  5_liquidation_on_dst.ts  verify.ts
scripts/contracts/: helpers.ts  utils.ts
scripts/deployments/: contracts.ts
test/__setup/: setup.ts
test/oracles/: SimpleKeyValueOracle.ts
test/pool/: LendingPool.ts
test/token/: CreditToken.ts  DebtToken.ts  MintableERC20.ts
(+1 files in other folders)
