[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
candid = "0.8.2"
serde = "1.0.160"
ic-web3 = { git = "https://github.com/horizonx-tech/ic-web3" }
lazy_static = "1.4.0"
ic-stable-memory = "0.4.4"
network = {path = "../network"}
