[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.2"
hex-literal = "0.4.1"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ic-web3 = { git = "https://github.com/horizonx-tech/ic-web3" }
serde_json = "1.0.95"
instant = "0.1"
wasm-bindgen = { version = "0.2.68", optional = true, features = ["serde-serialize"] }
ic-cdk-timers = "0.1.2"
serde = "1.0.160"
common = {path = "../common"}
