[package]
name = "lock_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.6.10"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
instant = "0.1.12"
serde = "1.0.163"
serde_json = "1.0.96"
network = { path = "../network" }
chainsight-generate = {path = "../chainsight-generate"}
common = {path = "../common"}
core = {path = "../core"}
ic-web3 = { git = "https://github.com/horizonx-tech/ic-web3" }
libsecp256k1 = { version = "0.7.1", features = ["lazy-static-context"] }
ic-stable-memory = "0.4.4"
